# CTSpinoPelvic1K

./: .gitattributes  .gitignore  CITATION.cff  CTSpinoPelvic1K-1.code-workspace  LICENSE  Makefile  NOTICE  README.md  REVIEWERS.md  REVIEWERS_AI_EDITING.md  REVIEWERS_CHEATSHEET.md  REVIEWERS_FIXING.md  REVIEWERS_LINUX.md  REVIEWERS_MAC.md  REVIEWERS_WINDOWS.md  STATUS.md  _README_hf.md  class_mixing_worklist.json  pyproject.toml  requirements.txt  spine_extend_worklist.json  spine_worklist.json  student_vertebra_work.csv
configs/: default.env  flip_list.json  pseudolabel_models.json
containers/: README.md  nnunet_wandb_variant.py
data/: README.md  itksnap_v4_labels.txt
docker/: Dockerfile  Dockerfile.totalsegmentator
docs/: CLASSFIX_REVIEW.md  CORRECTIONS.md  DATASETS_ROADMAP.md  DATASET_PRINCIPLES.md  LABELING_GUIDE.md  REVIEW.md  RIB_ANCHOR_RATIONALE.md  RIB_ANCHOR_REVIEW_GUIDE.md  RIB_REVIEW_GUIDE.md  ROADMAP.md  SPINE_REVIEW.md  STUDENT_ANNOTATION_PROTOCOL.md  ctspine1k_corrections.csv  dataset_card.md  email_student_onboarding.md  email_update.md  lstv_reread_queue.csv  pipeline.md  survey_protocol.md  troubleshooting.md
mlhc/: full-paper-template.tex  visual_abstract.tex
review_service/: Dockerfile  README.md  __init__.py  admin.py  app.py  deploy_v4_spaces.py  requirements.txt  service.py  store.py
reviewtool/: README.md  __init__.py  cli.py
scripts/: LSTVReviewer.py  __init__.py  analyze_lstv_zpos.py  apply_lumbar_rib_class.py  apply_manual_flips.py  audit_lr_full.py  auto_adjudicate.py  auto_finalize.py  benchmark_moller.py  benchmark_totalseg.py  bone_leak_qc.py  boundary_decomp.py  build_corrections_manifest.py  build_db.py  build_final_dataset.py  build_manifest.py  build_v3_ribs.py  build_v3_totalseg.py  build_v4_ribs.py  check_scouts.py  check_spine_labels.py  dataset_interface.py  detect_stump_ribs.py  diagnose_series.py  docker_push.sh  download_tcia_colonog.py  eval_vs_manual.py  export_hf.py  export_review_crops.py  extract_lstv_review.py  (+62 more)
(+92 files in other folders)
